# ai-roadmap-365

./: README.md
docs/: publishing.md
labs/sections/ai-engineering/: README.md
labs/sections/capstone/: README.md
labs/sections/computing-foundations/: README.md
labs/sections/computing-foundations/day-001-how-a-computer-works-from-transistors/: README.md  metadata.yml
labs/sections/computing-foundations/day-002-the-cpu-fetch-decode-execute/: README.md  metadata.yml  security.md
labs/sections/computing-foundations/day-003-memory-hierarchy-registers-ram-and-storage/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-004-binary-and-data-representation-bits-bytes/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-005-text-images-and-sound-as-data/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-006-operating-systems-what-they-do-and/: README.md  metadata.yml  security.md
labs/sections/computing-foundations/day-007-processes-threads-and-scheduling/: README.md  metadata.yml  troubleshooting.md
labs/sections/computing-foundations/day-008-meet-the-terminal-shells-prompts-and/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-009-navigating-the-filesystem-paths-files-and/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-010-working-with-text-cat-grep-sed/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-011-environment-variables-and-shell-configuration/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-012-shell-scripting-variables-loops-and-conditionals/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-013-package-managers-homebrew-apt-and-winget/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-014-automating-tasks-with-shell-scripts-and/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-015-what-happens-when-you-load-a/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-016-ip-addresses-dns-and-routing/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-017-tcp-udp-and-ports/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-018-http-requests-responses-and-methods/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-019-https-and-tls-encryption-on-the/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-020-how-browsers-render-html-css-and/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-021-inspecting-traffic-with-curl-and-developer/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-022-what-an-api-is-and-why/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-023-rest-fundamentals-resources-and-verbs/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-024-json-and-data-serialization/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-025-api-authentication-keys-tokens-and-oauth/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-026-webhooks-and-event-driven-apis/: README.md  metadata.yml  security.md  troubleshooting.md
labs/sections/computing-foundations/day-027-rate-limits-pagination-and-error-handling/: README.md  (+3 more)
labs/sections/deep-learning/: README.md
labs/sections/deployment-mlops-and-security/: README.md
labs/sections/llms-and-generative-ai/: README.md
labs/sections/machine-learning/: README.md
labs/sections/math-statistics-and-data/: README.md
labs/sections/programming-with-python/: README.md
labs/sections/programming-with-python/day-077-quality-gates-for-a-python-project/examples/: check.sh  pyproject.toml
labs/sections/programming-with-python/day-077-quality-gates-for-a-python-project/examples/ci-reference/: pre-commit-config.yaml  quality-gate.yml
labs/sections/programming-with-python/day-077-quality-gates-for-a-python-project/examples/coverage-demo/: promo.py  test_executes_everything.py  test_promo_no_assertions.py  test_promo_with_assertions.py
labs/sections/programming-with-python/day-077-quality-gates-for-a-python-project/examples/pricekit/: __init__.py  receipt.py
labs/sections/programming-with-python/day-077-quality-gates-for-a-python-project/examples/tests/: test_money.py  test_receipt.py
labs/sections/programming-with-python/day-077-quality-gates-for-a-python-project/starter/: check.sh  pyproject.toml
labs/sections/programming-with-python/day-077-quality-gates-for-a-python-project/starter/pricekit/: money.py
labs/sections/programming-with-python/day-077-quality-gates-for-a-python-project/starter/tests/: test_money.py
(+956 files in other folders)
