# One project, one configuration file.
#
# Every stage of the gate reads its settings from a table in this file:
# Ruff from [tool.ruff], mypy from [tool.mypy], pytest from
# [tool.pytest.ini_options], and coverage.py from [tool.coverage.*]. Nobody
# has to remember which dotfile a rule lives in, and a reviewer can see the
# whole standard in one screen.

[project]
name = "pricekit"
version = "0.1.0"
description = "A very small pricing library, used as the subject of a quality gate."
requires-python = ">=3.10"

# --- Stage 4: tests ---------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the project root on sys.path so `import pricekit` works whether the
# suite is started as `pytest` or as `python -m pytest`. Without this the two
# spellings behave differently, which is exactly the kind of "works when I run
# it" difference a gate exists to eliminate.
pythonpath = ["."]
# -q keeps the passing run to a few lines; --strict-markers turns a misspelled
# marker into an error instead of a silent no-op.
addopts = "-q --strict-markers"

# --- Stage 3: types ---------------------------------------------------------
[tool.mypy]
files = ["pricekit"]
strict = true
# Show the rule name on every message, so a failure tells you which switch
# produced it and therefore how to argue with it.
show_error_codes = true

# --- Stages 1 and 2: format and lint ---------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/W: style errors, F: real mistakes (unused imports, undefined names),
# I: import ordering, UP: modern-Python rewrites, B: likely bugs.
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Tests deliberately assert on broad exception types and import fixtures they
# only use through pytest, so two rules are relaxed there and nowhere else.
"tests/*" = ["B017"]

# --- Stage 5: coverage ------------------------------------------------------
[tool.coverage.run]
# branch = true measures both directions of every if, which line coverage
# alone cannot see.
branch = true
source = ["pricekit"]

[tool.coverage.report]
show_missing = true
# The ratchet. Raise it when the real number rises; never lower it silently.
fail_under = 95
