# YOUR project configuration — the other half of the gate.
#
# Every stage you add to check.sh reads its settings from a table in this one
# file. Fill each table in as you add the stage that uses it. Exercises 1b to
# 5b below pair with exercises 1 to 5 in check.sh.
#
# Why one file rather than five dotfiles: a reviewer can see the whole
# standard on one screen, a new contributor has exactly one place to look, and
# the settings cannot drift apart the way a .flake8 and a setup.cfg do.

[project]
name = "pricekit"
version = "0.1.0"
description = "A very small pricing library, used as the subject of a quality gate."
requires-python = ">=3.10"

# --- EXERCISE 1b: the formatter --------------------------------------------
# Add a [tool.ruff] table with:
#     line-length = 100
#     target-version = "py310"
# Ruff's formatter and linter both read it.


# --- EXERCISE 2b: the linter ------------------------------------------------
# Add a [tool.ruff.lint] table with:
#     select = ["E", "W", "F", "I", "UP", "B"]
# E/W are style errors, F catches real mistakes such as an unused import,
# I sorts imports, UP modernises old syntax, B flags likely bugs.
#
# Then add a [tool.ruff.lint.per-file-ignores] table with:
#     "tests/*" = ["B017"]
# because the tests deliberately assert on a broad exception type in one place,
# and a blanket exception is better than a rule nobody can satisfy.


# --- EXERCISE 3b: the type checker -----------------------------------------
# Add a [tool.mypy] table with:
#     files = ["pricekit"]
#     strict = true
#     show_error_codes = true
# `files` is what lets check.sh call `mypy` with no arguments at all.


# --- EXERCISE 4b: the test runner and coverage measurement ------------------
# Add a [tool.pytest.ini_options] table with:
#     testpaths = ["tests"]
#     pythonpath = ["."]
#     addopts = "-q --strict-markers"
# `pythonpath = ["."]` makes `import pricekit` work whether the suite is
# started as `pytest` or as `python -m pytest`. Leave it out and the two
# spellings behave differently — the exact class of surprise a gate exists to
# eliminate.
# and a [tool.coverage.run] table with:
#     branch = true
#     source = ["pricekit"]
# branch = true measures both directions of every if, which plain line
# coverage cannot see.


# --- EXERCISE 5b: the coverage floor ----------------------------------------
# Add a [tool.coverage.report] table with:
#     show_missing = true
#     fail_under = 95
# `fail_under` is what makes `coverage report` exit non-zero, and therefore
# what makes coverage a GATE rather than a number nobody reads. Treat it as a
# ratchet: raise it when the real figure rises, never lower it quietly.
